# colorOverlay

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main.h
.github/workflows/: main.yml
res/: AppIcon.icns
src/: main.cpp  mainwindow.cpp  mainwindow.h
